Update mat-tab style

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/preview-user/preview-user.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/preview-user/preview-user.component.scss
@@ -1,6 +1,8 @@
 @import '../../common/table-view.scss';
 
 .preview-users {
+  padding: 24px 34px 34px !important;
+
   .progress {
     margin-top: 30px;
 
