--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.scss
@@ -1,6 +1,7 @@
 @import '../../common/table-view.scss';
 
 .stratification-factors-list-container {
+  padding: 24px 34px 34px !important;
   border-radius: 10px;
   box-shadow: unset !important;
   padding: 0;
