--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/profile-info/profile-info.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/profile-info/profile-info.component.scss
@@ -2,6 +2,7 @@ $role-background-color: #e6fce9;
 $role-text-color: #0a7319;
 
 .profile-wrapper {
+  padding: 24px 34px 34px !important;
   border-radius: 10px;
   padding-top: 10px;
 
