--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/experiment-users-root/experiment-users-root.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/experiment-users-root/experiment-users-root.component.html
@@ -3,7 +3,13 @@
   <span class="ft-16-400 subtitle" [innerHTML]="'users.sub-heading.text' | translate"></span>
 
   <mat-card appearance="raised" class="tabs-wrapper">
-    <mat-tab-group disableRipple="true" (selectedTabChange)="selectedTabChange($event)">
+    <mat-tab-group
+      [selectedIndex]="0"
+      [mat-stretch-tabs]="false"
+      [dynamicHeight]="true"
+      disableRipple
+      (selectedTabChange)="selectedTabChange($event)"
+    >
       <!-- <mat-tab [label]="'users.experiment-users-title.text' | translate">
         <users-experiment-users></users-experiment-users>
       </mat-tab> -->
