--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/experiment-users-root/experiment-users-root.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/experiment-users-root/experiment-users-root.component.html
@@ -10,13 +10,28 @@
       disableRipple
       (selectedTabChange)="selectedTabChange($event)"
     >
-      <!-- <mat-tab [label]="'users.experiment-users-title.text' | translate">
+      <!-- <mat-tab>
+        <ng-template mat-tab-label>
+          <span class="ft-22-600 tab-label">
+              {{ 'users.experiment-users-title.text' | translate }}
+          </span>
+        </ng-template>
         <users-experiment-users></users-experiment-users>
       </mat-tab> -->
-      <mat-tab [label]="'users.preview-users-title.text' | translate">
+      <mat-tab>
+        <ng-template mat-tab-label>
+          <span class="ft-22-600 tab-label">
+              {{ 'users.preview-users-title.text' | translate }}
+          </span>
+        </ng-template>
         <users-preview-user></users-preview-user>
       </mat-tab>
-      <mat-tab [label]="'users.stratification.text' | translate">
+      <mat-tab>
+        <ng-template mat-tab-label>
+          <span class="ft-22-600 tab-label">
+              {{ 'users.stratification.text' | translate }}
+          </span>
+        </ng-template>
         <users-stratification-factor-list></users-stratification-factor-list>
       </mat-tab>
     </mat-tab-group>
