--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -331,7 +331,7 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
       overflow: hidden;
     }
 
-    .mat-mdc-cell {
+    .mat-mdc-cell, .mat-mdc-header-cell {
       background-color: transparent;
       border-bottom: none;
       letter-spacing: normal;
