Set max-height for decision points table row (#1269)
Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
@@ -280,6 +280,12 @@ $font-size-small: 15px;
     &-partition {
       margin-bottom: 24px;
 
+      .table {
+        mat-row {
+          max-height: 50px;
+        }
+      }
+
       .factor-table {
         overflow: auto;
 
@@ -291,6 +297,10 @@ $font-size-small: 15px;
         mat-header-cell,
         mat-cell {
           justify-content: left;
+        }
+
+        mat-header-cell {
+          color: var(--grey-2);
         }
 
         mat-icon {
