--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.html
@@ -15,11 +15,15 @@
             {{ 'home.new-experiment.schedule.end-on.text' | translate }}
           </span>
         </mat-radio-button>
-        <mat-form-field class="dense-2 ft-14-700">
+        <mat-form-field
+          class="dense-2"
+          appearance="outline"
+          subscriptSizing="dynamic"
+        >
           <input
+            class="ft-14-400 input"
             matInput
             readonly
-            class="input"
             [min]="minDate"
             [owlDateTimeTrigger]="dateTime"
             [owlDateTime]="dateTime"
@@ -37,11 +41,15 @@
           </span>
         </mat-radio-button>
         <div class="end-criteria" *ngIf="experiment.group">
-          <mat-form-field class="dense-2 ft-14-700 group-type-control">
+          <mat-form-field
+            class="dense-2 group-type-control"
+            appearance="outline"
+            subscriptSizing="dynamic"
+          >
             <input
+              class="ft-14-400 input"
               type="number"
               matInput
-              class="input"
               [placeholder]="
                 ('home.new-experiment.schedule.group-count.placeholder.text' | translate) +
                 ' ' +
@@ -61,11 +69,15 @@
           ></span>
         </div>
         <div class="end-criteria">
-          <mat-form-field class="dense-2 ft-14-700">
+          <mat-form-field
+            class="dense-2"
+            appearance="outline"
+            subscriptSizing="dynamic"
+          >
             <input
+              class="ft-14-400 input"
               type="number"
               matInput
-              class="input"
               [placeholder]="'home.new-experiment.schedule.user-count.placeholder.text' | translate"
               formControlName="userCount"
             />
