--- a/frontend/projects/upgrade/src/app/shared/components/delete/delete.component.scss
+++ b/frontend/projects/upgrade/src/app/shared/components/delete/delete.component.scss
@@ -2,6 +2,8 @@
   .name {
     width: 100%;
     line-height: 18px;
+    margin-top: -10px;
+    padding-bottom: 20px;
 
     &-input {
       line-height: 18px;
