--- a/frontend/projects/upgrade/src/styles/utility.scss
+++ b/frontend/projects/upgrade/src/styles/utility.scss
@@ -2,6 +2,7 @@
   font-family: 'Open Sans' !important;
   font-size: $size + px !important;
   font-weight: $weight !important;
+  letter-spacing: normal !important;
 }
 
 html {
