--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/enrollment-over-time/enrollment-over-time.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/enrollment-over-time/enrollment-over-time.component.scss
@@ -3,12 +3,13 @@
 
   .title {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 
   .enrollment-filters {
     display: flex;
     justify-content: space-between;
+    column-gap: 20px;
 
     .sites {
       width: 250px;
@@ -16,14 +17,6 @@
 
     .conditions {
       width: 400px;
-    }
-
-    mat-form-field {
-      margin-right: 20px;
-    }
-
-    .dropdown-label {
-      color: var(--grey-2);
     }
   }
 
