--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.scss
@@ -15,12 +15,17 @@ $experiment-state-light-color: #8f9bb3;
     height: 94px;
 
     .filter-options {
-      margin-right: 10px;
-      width: 80px;
+      margin-right: 20px;
+      width: 120px;
     }
 
     .search-input {
       line-height: 20px;
+    }
+
+    .search-icon {
+      margin-top: -6px;
+      height: 16px;
     }
 
     button {
@@ -36,10 +41,6 @@ $experiment-state-light-color: #8f9bb3;
     .import-experiment {
       margin-right: 20px;
     }
-  }
-  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
-  ::ng-deep .mat-form-field-suffix {
-    top: 5px;
   }
 
   .experiment-list-table-container {
