--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.scss
@@ -1,14 +1,7 @@
 .experiment-overview {
   display: flex;
   flex-direction: column;
-
-  mat-form-field {
-    line-height: 20px;
-  }
-
-  .mat-mdc-form-field {
-    margin-bottom: 10px;
-  }
+  row-gap: 18px;
 
   .name {
     width: 230px;
@@ -45,12 +38,18 @@
     width: 230px;
   }
 
+  .chip-grid {
+    max-height: 70px;
+    overflow-y: auto;
+  }
+
   .tags {
     width: 100%;
   }
 
   .mat-mdc-checkbox {
-    margin-top: -3px;
+    z-index: 1;
+    margin-top: -6px;
     margin-left: -12px;
   }
 }
