--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/conditions-table/conditions-table.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/conditions-table/conditions-table.component.scss
@@ -71,10 +71,10 @@
       flex: 0 0 calc(10% - 15px);
       width: calc(10% - 15px);
       justify-content: flex-end;
+      overflow: visible;
 
       .input-weight {
         width: 50px;
-        // text-align: right;
       }
     }
 
@@ -95,7 +95,7 @@
         background-color: transparent;
 
         .icon {
-          margin-top: -5px;
+          margin-top: -1px;
           margin-left: -3px;
           display: flex;
           justify-content: center;
