--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.scss
@@ -15,6 +15,8 @@
     }
 
     .starts-on-title {
+      color: var(--black-2);
+
       &--disable {
         color: var(--grey-5);
       }
@@ -36,7 +38,8 @@
         margin-left: 30px;
 
         .group-type {
-          margin-left: 30px;
+          margin-left: 16px;
+          color: var(--black-2);
 
           &-control {
             line-height: 18px;
