--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-status/experiment-status.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-status/experiment-status.component.scss
@@ -8,12 +8,12 @@
   &-form {
     display: flex;
     justify-content: space-between;
+    column-gap: 20px;
     margin: 20px 0;
-    padding: 0 40px;
+    padding: 0 40px 10px;
 
     mat-form-field {
-      margin-right: 10px;
-      width: 45%;
+      width: calc(50% - 20px);
 
       .status-selection {
         line-height: 20px;
@@ -25,9 +25,8 @@
   .error-msg {
     display: flex;
     flex-direction: column;
-    margin-top: -20px;
-    margin-bottom: 30px;
-    padding: 0 40px;
+    padding: 0 40px 30px;
+    margin-top: -35px;
   }
 
   .info-msg {
