--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/export-experiment/export-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/export-experiment/export-experiment.component.html
@@ -2,22 +2,28 @@
   <span class="ft-24-700 title">{{ 'home.view-experiment.export-experiment.text' | translate | titlecase }}</span>
 
   <form [formGroup]="exportForm" class="export-experiment-container-form">
-    <mat-form-field class="dense-2 ft-16-400">
-      <mat-label>{{ 'home.view-experiment.export-method.text' | translate }}</mat-label>
-      <mat-select class="ft-16-400 export-selection" formControlName="exportMethod">
-        <mat-option *ngFor="let method of exportMethod" [value]="method.value">
+    <mat-form-field
+      class="dense-2"
+      appearance="outline"
+      subscriptSizing="dynamic"
+    >
+      <mat-label class="ft-14-400">
+        {{ 'home.view-experiment.export-method.text' | translate }}
+      </mat-label>
+      <mat-select class="ft-14-400 export-selection" formControlName="exportMethod">
+        <mat-option class="ft-14-400" *ngFor="let method of exportMethod" [value]="method.value">
           {{ method.value }}
         </mat-option>
       </mat-select>
     </mat-form-field>
   </form>
   <span
-    class="info-msg"
+    class="ft-14-400 info-msg"
     *ngIf="exportForm.get('exportMethod').value === 'Email Experiment Data (CSV)'"
     [innerHTML]="'home.view-experiment.export-warning.text' | translate: { email: emailId }"
   ></span>
   <span
-    class="info-msg"
+    class="ft-14-400 info-msg"
     *ngIf="exportForm.get('exportMethod').value === 'Email Experiment Data (CSV)' && experiments.length > 1"
   >
     {{ 'home.view-experiment.export-csv-warning.text' | translate }}
