--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/post-experiment-rule/post-experiment-rule.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/post-experiment-rule/post-experiment-rule.component.scss
@@ -8,11 +8,12 @@
   &-form {
     display: flex;
     justify-content: space-between;
+    column-gap: 20px;
     margin: 20px 0;
-    padding: 0 40px;
+    padding: 0 40px 30px;
 
     mat-form-field {
-      width: 45%;
+      width: calc(50% - 20px);
     }
   }
 
